unpackaged/main/default/objects/Experient_API__c/Experient_API__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Experient API Settings</label>
</CustomObject>