unpackaged/main/default/objects/Experient_API__c/fields/actcode__c.field-meta.xml
<CustomField>
    <fullName>actcode__c</fullName>
    <inlineHelpText>Only need to utilize if there are multiple Experient Events active at the same time, otherwise only adjust at the Org Default level</inlineHelpText>
    <label>actcode</label>
    <length>16</length>
    <type>Text</type>
</CustomField>