unpackaged/main/default/objects/Experient_API__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Org Default only! This activates the Experient API Trigger</description>
    <inlineHelpText>Only works at the Org Default level. Turns the API Trigger on / off</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>