unpackaged/main/default/objects/Experient_API__c/fields/apiKey__c.field-meta.xml
<CustomField>
    <fullName>apiKey__c</fullName>
    <description>the API Key for the Experient App</description>
    <inlineHelpText>Should only be adjusted at the org Default Level</inlineHelpText>
    <label>apiKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>