unpackaged/main/default/objects/Experient_API__c/fields/BadgeId__c.field-meta.xml
<CustomField>
    <fullName>BadgeId__c</fullName>
    <inlineHelpText>The badge ID for the Experient Event that is being utilized</inlineHelpText>
    <label>BadgeId</label>
    <length>16</length>
    <type>Text</type>
</CustomField>