unpackaged/main/default/objects/Experient_API__c/fields/End_Point__c.field-meta.xml
<CustomField>
    <fullName>End_Point__c</fullName>
    <inlineHelpText>Shouldn&#39;t ever have to change. Better to adjust at the Org Default Level</inlineHelpText>
    <label>End Point</label>
    <type>Url</type>
</CustomField>