unpackaged/main/default/objects/Experient_API__c/fields/Test_Mode__c.field-meta.xml
<CustomField>
    <fullName>Test_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field is used in order to accomplish test coverage for the Experient API</description>
    <inlineHelpText>NEVER CHANGE THIS VALUE!!!</inlineHelpText>
    <label>Test Mode (Code)</label>
    <type>Checkbox</type>
</CustomField>